--- a/ap-generieke-terugmeldfaciliteit-config.json
+++ b/ap-generieke-terugmeldfaciliteit-config.json
@@ -5,6 +5,7 @@
   "publicatiedatum": "2019-02-07",
   "type_toepassing": "Aanbevolen (vrijwillig)",
   "categorie": "Vocabularium & applicatieprofielen",
+  "description_file" : "ap-generieke-terugmeldfaciliteit.md",
   "specificatiedocument": [
     {
       "naam": "Generieke Terugmeldfaciliteit",
