--- a/ap-generieke-terugmeldfaciliteit-config.json
+++ b/ap-generieke-terugmeldfaciliteit-config.json
@@ -1,5 +1,5 @@
 {
-  "naam": "Applicatieprofiel Issue Tracking voor burgers en Organisaties",
+  "naam": "Applicatieprofiel Generieke Terugmeldfaciliteit",
   "verantwoordelijke_organisatie": "Agentschap Informatie Vlaanderen",
   "identificator_organisatie": "https://data.vlaanderen.be/doc/organisatie/OVO002949",
   "publicatiedatum": "2019-02-07",
