--- a/ap-issue-tracking-config.json
+++ b/ap-issue-tracking-config.json
@@ -1,11 +1,12 @@
 {
   "naam": "Applicatieprofiel Issue tracking voor burgers en organisaties",
+  "rapport" : "https://raw.githubusercontent.com/Informatievlaanderen/OSLO-Generated/test/report/doc/applicatieprofiel/issue-tracking-voor-burgers-en-organisaties/ontwerpdocument/2020-01-06/all-issue-tracking-voor-burgers-en-organisaties.jsonld",
   "verantwoordelijke_organisatie": "Agentschap Informatie Vlaanderen",
   "identificator_organisatie": "https://data.vlaanderen.be/doc/organisatie/OVO002949",
   "publicatiedatum": "2019-02-07",
   "type_toepassing": "Aanbevolen (vrijwillig)",
   "categorie": "Vocabularium & applicatieprofielen",
-  "description_file" : "ap-issue-tracking.md",
+  "beschrijving" : "ap-issue-tracking.md",
   "specificatiedocument": [
     {
       "naam": "Applicatieprofiel Issue tracking voor burgers en organisaties",
