--- a/ap-generieke-terugmeldfaciliteit-config.json
+++ b/ap-generieke-terugmeldfaciliteit-config.json
@@ -1,12 +1,12 @@
 {
   "naam": "Applicatieprofiel Generieke Terugmeldfaciliteit",
-  "rapport" : "https://raw.githubusercontent.com/Informatievlaanderen/OSLO-Generated/test/report/doc/applicatieprofiel/generieke-terugmeldfaciliteit/ontwerpdocument/2020-01-06/all-generieke-terugmeldfaciliteit.jsonld",
-  "verantwoordelijke_organisatie": "Agentschap Informatie Vlaanderen",
-  "identificator_organisatie": "https://data.vlaanderen.be/doc/organisatie/OVO002949",
+  "rapport": "https://raw.githubusercontent.com/Informatievlaanderen/OSLO-Generated/test/report/doc/applicatieprofiel/generieke-terugmeldfaciliteit/ontwerpdocument/2020-01-06/all-generieke-terugmeldfaciliteit.jsonld",
+  "verantwoordelijke_organisatie": "Agentschap Digitaal Vlaanderen",
+  "identificator_organisatie": "https://data.vlaanderen.be/id/organisatie/OVO002949",
   "publicatiedatum": "2019-02-07",
   "type_toepassing": "Aanbevolen (vrijwillig)",
   "categorie": "Applicatieprofiel",
-  "beschrijving" : "ap-generieke-terugmeldfaciliteit.md",
+  "beschrijving": "ap-generieke-terugmeldfaciliteit.md",
   "specificatiedocument": [
     {
       "naam": "Generieke Terugmeldfaciliteit",
