--- a/ap-issue-tracking-config.json
+++ b/ap-issue-tracking-config.json
@@ -1,7 +1,7 @@
 {
   "title": "Applicatieprofiel Issue tracking voor burgers en organisaties",
   "category": "Applicatieprofiel",
-  "usage": "Aanbevolen (vrijwillig)",
+  "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/ErkendeStandaard",
   "descriptionFileName": "ap-issue-tracking.md",
   "responsibleOrganisation": [
