--- a/ap-issue-tracking-config.json
+++ b/ap-issue-tracking-config.json
@@ -1,6 +1,6 @@
 {
   "title": "Applicatieprofiel Issue tracking voor burgers en organisaties",
-  "category": "Applicatieprofiel",
+  "category": "https://data.vlaanderen.be/id/concept/StandaardType/Applicatieprofiel",
   "usage": "https://data.vlaanderen.be/id/concept/StandaardGebruik/Aanbevolen",
   "status": "https://data.vlaanderen.be/id/concept/StandaardStatus/ErkendeStandaard",
   "descriptionFileName": "ap-issue-tracking.md",
